--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,33 @@ body {
 a {
   color: #00B7FF;
 }
+
+body, html {
+	margin: 0px;
+}
+
+h1, h2, h3, h4, li, p, a {
+	 font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 100;
+	color: #fff;
+}
+
+#title{
+	margin: 10px;
+}
+
+#instructions{
+	margin-left: 10px;
+}
+
+#debug{
+	margin-left: 10px;
+}
+
+#overlay {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
