--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,15 +18,31 @@ h1, h2, h3, h4, li, p, a {
 }
 
 #title{
-	margin: 10px;
+	font-size: 30px;
+	font-weight: 100;
+	margin: 10px 10px;
+	padding: 0px 10px;
+
 }
 
 #instructions{
 	margin-left: 10px;
+	width: 100px;
+	background: rgba(50,50,50,0.8);
+	border-radius:10px; /* regular */
+	color: #fff;
+	padding: 30px;
 }
 
 #debug{
-	margin-left: 10px;
+	margin: 10px 10px;
+	width: 100px;
+	/*background: rgba(50,50,50,0.8);*/
+	border-radius:10px; /* regular */
+	color: #fff;
+	padding: 3px 10px;
+	position: absolute;
+	font-size: 60px;
 }
 
 #overlay {
