--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ head
           p#debugText {{debugText}}
     #videoPlayer
       video#video(hidden='hidden', preload='preload', autobuffer='autobuffer', seekable='seekable')
-        source(src='big-buck-bunny_trailer.webm', type='video/webm')
+        source(src='/big-buck-bunny_trailer.webm', type='video/webm')
       div
         canvas#projectionCanvas
     script(src='/controllers.js')
