--- a/views/index.jade
+++ b/views/index.jade
@@ -1,38 +1,41 @@
 html
-head
-    script(src='/javascripts/angular.min.js')
-    script(src='/javascripts/three.min.js')
-    script(src='/javascripts/PLYLoader.js')
-    script(src='/javascripts/OrbitControls.js')
-    script(src='/javascripts/DDSLoader.js')
-    script(src='/javascripts/MTLLoader.js')
-    script(src='/javascripts/OBJMTLLoader.js')
-    script(src='/javascripts/TypedArrayUtils.js')
-    script(src='/javascripts/jquery-2.1.1.min.js')
-    script(src='/javascripts/BinaryLoader.js')
-    script(src='/javascripts/async.js')
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    title RoadGL
-  body(style='margin: 0px; padding: 0px;', ng-app='roadglApp')
-    div(ng-controller='AppCtrl')
-      div
-        canvas#road
-          canvas
-      #overlay
-        #title
-          h3 RoadGL
-        #instructions
-          h2 Instructions
-          h4 Ctrl + Mouse to look around
-          h4 Space to Play/Pause
-        #debug
-          p#debugText {{debugText}}
-    #videoPlayer
-      video#video(hidden='hidden', preload='preload', autobuffer='autobuffer', seekable='seekable')
-        source(src='/big-buck-bunny_trailer.webm', type='video/webm')
-      div
-        canvas#projectionCanvas
-    script(src='/controllers.js')
-    script(src='/app.js')
-    script(src='/util.js')
-    script(src='/video.js')
+	head
+		script(src='/javascripts/angular.min.js')
+		script(src='/javascripts/three.min.js')
+		script(src='/javascripts/PLYLoader.js')
+		script(src='/javascripts/OrbitControls.js')
+		script(src='/javascripts/DDSLoader.js')
+		script(src='/javascripts/MTLLoader.js')
+		script(src='/javascripts/OBJMTLLoader.js')
+		script(src='/javascripts/TypedArrayUtils.js')
+		script(src='/javascripts/jquery-2.1.1.min.js')
+		script(src='/javascripts/BinaryLoader.js')
+		script(src='/javascripts/async.js')
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		title RoadGL
+	body(ng-app='roadglApp')
+		div(ng-controller='AppCtrl')
+			canvas#road
+				canvas
+			#overlay
+				#instructions.tab
+					h2 Instructions
+					h4 Ctrl + Mouse to look around
+					h4 Space to Play/Pause
+					h4 Arrow Keys to move car
+				#actions.tab
+					button.actionBtn(type="button")
+						|Undo
+					button.actionBtn(type="button")
+						|Redo
+				#debug.tab
+					p#debugText {{debugText}}
+		#videoPlayer
+			video#video(hidden='hidden', preload='preload', autobuffer='autobuffer', seekable='seekable')
+				source(src='/big-buck-bunny_trailer.webm', type='video/webm')
+			div
+				canvas#projectionCanvas
+		script(src='/controllers.js')
+		script(src='/app.js')
+		script(src='/util.js')
+		script(src='/video.js')
