--- a/views/index.jade
+++ b/views/index.jade
@@ -24,9 +24,9 @@ html
 					h4 Space to Play/Pause
 					h4 Arrow Keys to move car
 				#actions.tab
-					button.actionBtn(type="button")
+					button#undo.actionBtn(type="button")
 						|Undo
-					button.actionBtn(type="button")
+					button#redo.actionBtn(type="button")
 						|Redo
 				#debug.tab
 					p#debugText {{debugText}}
