adding gzip based video loader

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,8 @@ html
 		script(src='/javascripts/BinaryLoader.js')
 		script(src='/javascripts/async.js')
 		script(src='/javascripts/fpsmeter.js')
+		script(src='/javascripts/jszip.js')
+		script(src='/javascripts/jszip-utils.js')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		title RoadGL
 	body(ng-app='roadglApp')
