modularized lane edito

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,5 +37,6 @@ html
 				canvas#projectionCanvas
 		script(src='/controllers.js')
 		script(src='/app.js')
+		script(src='/editor.js')
 		script(src='/util.js')
 		script(src='/video.js')
