--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ html
 				#debug.tab
 					p#debugText {{debugText}}
 			#rightOverlay
-				#fps
+				#fps.tab
 				#slideDiv.tab
 					h3 Drag range
 					input#drrange(type="range", min="1", max="60", value="15", step="5")
