--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,7 @@ html
 		script(src='/javascripts/fpsmeter.js')
 		script(src='/javascripts/jszip.js')
 		script(src='/javascripts/jszip-utils.js')
+		script(src='/javascripts/numeric-1.2.6.js')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		title RoadGL
 	body(ng-app='roadglApp')
@@ -54,3 +55,5 @@ html
 		script(src='/editor.js')
 		script(src='/util.js')
 		script(src='/video.js')
+		script(src='/videoProjection.js')
+		script(src='/radar.js')
