modularizes jade code, adding includes and extends

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,10 @@
 html
 	head
-		script(type='text/javascript', src='/vendor/jquery.js')
-		script(src='/javascripts/angular.min.js')
-		script(src='/javascripts/three.min.js')
-		script(src='/javascripts/OrbitControls.js')
-		script(src='/javascripts/TypedArrayUtils.js')
-		script(src='/javascripts/BinaryLoader.js')
-		script(src='/javascripts/async.js')
-		script(src='/javascripts/fpsmeter.js')
-		script(src='/javascripts/jszip.js')
-		script(src='/javascripts/jszip-utils.js')
-		script(src='/javascripts/numeric-1.2.6.js')
-		script(type='text/javascript', src='/vendor/bootstrap.min.js')
+		link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
+		link(rel='icon', href='/favicon.ico', type='image/x-icon')
 		link(rel="stylesheet", href='/vendor/bootstrap.min.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		title RoadGL
+		link(rel='stylesheet', href='/stylesheets/editor.css')
+		title=title
 	body(ng-app='roadglApp')
 		div(ng-controller='AppCtrl')
 			canvas#road
@@ -65,6 +55,18 @@ html
 									a(href='#')
 										= i
 							- }
+		script(src='/vendor/jquery.js')
+		script(src='/vendor/bootstrap.min.js')
+		script(src='/javascripts/angular.min.js')
+		script(src='/javascripts/three.min.js')
+		script(src='/javascripts/OrbitControls.js')
+		script(src='/javascripts/TypedArrayUtils.js')
+		script(src='/javascripts/BinaryLoader.js')
+		script(src='/javascripts/async.js')
+		script(src='/javascripts/fpsmeter.js')
+		script(src='/javascripts/jszip.js')
+		script(src='/javascripts/jszip-utils.js')
+		script(src='/javascripts/numeric-1.2.6.js')
 		script(src='/controllers.js')
 		script(src='/app.js')
 		script(src='/editor.js')
