--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ html
 				canvas
 			#overlay
 				#title.tab
-					h4 
+					h4
 						=track
 				#instructions.tab
 					h3 Instructions
@@ -34,7 +34,7 @@ html
 				#doneDiv.tab
 					a(href="/")
 						button#quit.actionBtn(type="button")
-							|Quit	
+							|Quit
 			#rightOverlay
 				#fps.tab
 				#slideDiv.tab
@@ -76,3 +76,4 @@ html
 		script(src='/video.js')
 		script(src='/videoProjection.js')
 		script(src='/radar.js')
+		script(src='/boundingBoxes.js')
