--- a/views/index.jade
+++ b/views/index.jade
@@ -67,6 +67,8 @@ html
 		script(src='/javascripts/jszip.js')
 		script(src='/javascripts/jszip-utils.js')
 		script(src='/javascripts/numeric-1.2.6.js')
+		script(src='/javascripts/jpeg_encoder_basic.js')
+		script(src='/javascripts/jsmpg.js')
 		script(src='/controllers.js')
 		script(src='/app.js')
 		script(src='/editor.js')
