separates loading module w loading bar

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,6 +58,7 @@ html
 		script(src='/vendor/jquery.js')
 		script(src='/vendor/bootstrap.min.js')
 		script(src='/javascripts/angular.min.js')
+		script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-animate.min.js")
 		script(src='/vendor/loading-bar.js')
 		script(src='/javascripts/three.min.js')
 		script(src='/javascripts/OrbitControls.js')
@@ -72,6 +73,7 @@ html
 		script(src='/javascripts/jsmpg.js')
 		script(src='/app.js')
 		script(src='/editor.js')
+		script(src='/loading.js')
 		script(src='/util.js')
 		script(src='/video.js')
 		script(src='/videoProjection.js')
