--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -86,11 +86,11 @@ button:focus {
 	padding: 10px 10px;
 }
 
-#done{
+#save{
 	background: rgba(50,150,50,0.8);
 }
 
-#done:hover{
+#save:hover{
 	background: rgba(50,150,50,0.9);
 }
 
