--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ html
 					button#redo.actionBtn(type="button")
 						|Redo
 				#doneDiv.tab
-					button#done.actionBtn(type="button")
+					button#save.actionBtn(type="button")
 						|Save
 				#doneDiv.tab
 					a(href="/")
