--- a/views/index.jade
+++ b/views/index.jade
@@ -7,12 +7,12 @@ html
 		link(rel='stylesheet', href='/vendor/loading-bar.css')
 		title=title
 	body(ng-app='roadglApp')
-		div(ng-controller='AppCtrl')
+		div(ng-controller='AppCtrl', ng-trackinfo='#{JSON.stringify(trackInfo)}')
 			canvas#road
 				canvas
 			#overlay
 				#title.tab
-					h4=track
+					h4 {{track}}
 				#instructions.tab
 					h3 Instructions
 					p Ctrl + Mouse to look around
