--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
 				canvas
 			#overlay
 				#title.tab
-					h4 {{track}}
+					h4 {{trackInfo.track}}
 				#instructions.tab
 					h3 Instructions
 					p Ctrl + Mouse to look around
