adding native client based video decoding and optimizing video projection

--- a/views/index.jade
+++ b/views/index.jade
@@ -75,7 +75,7 @@ html
 		script(src='/editor.js')
 		script(src='/loading.js')
 		script(src='/util.js')
-		script(src='/video.js')
+		script(src='/video_nacl.js')
 		script(src='/videoProjection.js')
 		script(src='/radar.js')
 		script(src='/boundingBoxes.js')
