--- a/views/index.jade
+++ b/views/index.jade
@@ -40,8 +40,8 @@ html
 				#slideDiv.tab
 					h3 Drag range
 					input#drrange(type="range", min="1", max="60", value="15", step="5")
-				#debug.tab
-					p#debugText {{debugText}}
+				#log.tab
+					p#logText {{logText}}
 			#videoPlayerWrap
 				#videoPlayer
 					canvas#projectionCanvas
