--- a/views/index.jade
+++ b/views/index.jade
@@ -40,6 +40,8 @@ html
 				#slideDiv.tab
 					h3 Drag range
 					input#drrange(type="range", min="1", max="60", value="15", step="5")
+					h3 Play speed
+					input#playspeedrange(type="range", min="1", max="5", value="1", step="1")
 				#log.tab
 					p#logText {{logText}}
 			#videoPlayerWrap
