implements show/hide lane edit options

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ html
 					p Ctrl + Mouse to look around
 					p Space to Play/Pause
 					p Arrow Keys to move car
-				#tips.tab
+				#tips.tab(ng-show="editOptions")
 					h3 Click a point and then:
 					p 'f' to fork
 					p 'a' to append
