--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -3,12 +3,13 @@ body, html {
 	padding: 0px;
 	width: 100%;
 	height: 100%; 
+	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 } 
 
-h1, h2, h3, h4, li, p, a {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+body, h1, h2, h3, h4, li, a, button {
 	font-weight: 100;
 	color: #fff;
+	letter-spacing: 0.09em;
 }
 
 button:focus {
@@ -19,7 +20,7 @@ button:focus {
 	margin-bottom: 15px;
 }
 
-#overlay {
+#left-top{
 	width: 200px;
 	position: absolute;
 	top: 0;
@@ -27,7 +28,25 @@ button:focus {
 	margin: 20px 20px;
 }
 
-#rightOverlay {
+#left-bottom{
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+	margin: 20px 20px;
+}
+
+#center-bottom{
+	width: auto;
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+#right-side{
 	width: 200px;
 	position: absolute;
 	top: 0;
@@ -53,16 +72,11 @@ button:focus {
 	text-align: center;
 }
 
-#instructions{
-	padding: 15px 15px;
-	background: rgba(50,50,50,0.8);
-	color: #fff;
-}
-
-#tips{
-	padding: 5px 15px;
-	background: rgba(50,50,50,0.8);
-	color: #fff;
+#options{
+	padding: 5px 10px;
+	background: black;
+	color: white;
+	border: 1px solid #fff;
 }
 
 #log{
@@ -71,34 +85,51 @@ button:focus {
 	font-size: 30px;
 }
 
-.actionBtn{
-	width: 100%;
-	height: 30px;
-	font-size: 20px;
-	background: rgba(150,50,50,0.8);
-	border: none;
-	color: #fff;
-	margin: 5px 0px;
+.actionBtn {
+    width: 80px;
+    height: 80px;
+    border: 1px solid #f5f5f5;
+    border-radius: 50%;
+    text-align:center;
+    text-decoration:none;
+    box-shadow: 0 0 3px gray;
+    margin: 0px 10px;
+    font-size: 1.5em;
+    background: none;
+    color: #fff; 
+}
+
+.infoBtn {
+    width: 100%;
+    border: none;
+    text-align:left;
+    text-decoration:none;
+    box-shadow: 0 0 3px gray;
+    font-size: 1.0em;
+    background: #000;
+    color: #fff;
+
+}
+
+#actions{
+	display: inline-block;
 }
 
 #slideDiv{
-	background: rgba(50,50,50,0.8);
+	background: none;
 	padding: 10px 10px;
 }
 
-#save{
-	background: rgba(50,150,50,0.8);
+#undo:hover{
+	background: rgb(200,50,50);
+}
+
+#redo:hover{
+	background: rgb(255,150, 50);
 }
 
 #save:hover{
-	background: rgba(50,150,50,0.9);
-}
-
-#slideDiv{
-}
-
-.actionBtn:hover{
-	background: rgba(250,50,50,0.9);
+	background: rgb(50,150,50);
 }
 
 #videoPlayerWrap {
