--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -35,6 +35,16 @@ button:focus {
 	margin: 20px 20px;
 }
 
+#center-top{
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	left: 0;
+	right: 0;
+	top: 2px;
+}
+
 #center-bottom{
 	width: auto;
 	position: absolute;
@@ -73,30 +83,16 @@ button:focus {
 }
 
 #options{
+	margin-top: 20px;
 	padding: 5px 10px;
-	background: black;
+	background: none;
 	color: white;
-	border: 1px solid #fff;
 }
 
 #log{
 	color: #fff;
 	width: 100%;
 	font-size: 30px;
-}
-
-.actionBtn {
-    width: 80px;
-    height: 80px;
-    border: 1px solid #f5f5f5;
-    border-radius: 50%;
-    text-align:center;
-    text-decoration:none;
-    box-shadow: 0 0 3px gray;
-    margin: 0px 10px;
-    font-size: 1.5em;
-    background: none;
-    color: #fff; 
 }
 
 .infoBtn {
@@ -120,6 +116,40 @@ button:focus {
 	padding: 10px 10px;
 }
 
+.actionBtn {
+    width: 80px;
+    height: 80px;
+    border: 1px solid #f5f5f5;
+    border-radius: 50%;
+    text-align:center;
+    text-decoration:none;
+    box-shadow: 0 0 3px gray;
+    margin: 10px 10px;
+    font-size: 1.2em;
+    background: none;
+    color: #fff; 
+}
+
+#fork{
+	background: black;
+}
+
+#append{
+	background: black;
+}
+
+#done{
+	background: black;
+}
+
+#fork:hover, #append:hover{
+	background: rgb(50,150,150);;
+}
+
+#done:hover{
+	background: rgb(150,50,150);;
+}
+
 #undo:hover{
 	background: rgb(200,50,50);
 }
@@ -132,7 +162,7 @@ button:focus {
 	background: rgb(50,150,50);
 }
 
-#videoPlayerWrap {
+#right-bottom {
 	position: absolute;
 	right: 10px;
 	bottom: 10px;
