changes angular version to fix TypeError

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,7 +58,7 @@ html
 				#videoPlayerWrap
 		script(src='/vendor/jquery.js')
 		script(src='/vendor/bootstrap.min.js')
-		script(src='/javascripts/angular.min.js')
+		script(src="/vendor/angular.js")
 		script(src='/javascripts/angular-animate.min.js')
 		script(src='/vendor/loading-bar.js')
 		script(src='/javascripts/three.min.js')
