--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -78,6 +78,14 @@ button:focus {
 	border-radius: 0px;
 }
 
+#scrubberDiv{
+	width: 100%;
+	max-width: 700px;
+	padding: 0px 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 #title{
 	text-align: center;
 }
@@ -108,7 +116,6 @@ button:focus {
 }
 
 #actions{
-	display: inline-block;
 }
 
 #slideDiv{
