--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -2,9 +2,9 @@ body, html {
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
-	height: 100%; 
+	height: 100%;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-} 
+}
 
 body, h1, h2, h3, h4, li, a, button {
 	font-weight: 100;
@@ -113,6 +113,19 @@ button:focus {
     background: #000;
     color: #fff;
 
+
+}
+
+.categoryBtn {
+    width: 100%;
+    border: none;
+    text-align:left;
+    text-decoration:none;
+    box-shadow: 0 0 3px gray;
+    font-size: 1.0em;
+    background: #000;
+    color: #fff;
+
 }
 
 #actions{
@@ -134,7 +147,7 @@ button:focus {
     margin: 10px 10px;
     font-size: 1.2em;
     background: none;
-    color: #fff; 
+    color: #fff;
 }
 
 #fork{
@@ -165,8 +178,12 @@ button:focus {
 	background: rgb(255,150, 50);
 }
 
-#save:hover{
+#save:hover,#categoryBtn:hover,#tagBtn:hover{
 	background: rgb(50,150,50);
+}
+
+.greenBackground {
+    background: rgb(50,150,50);
 }
 
 #right-bottom {
