--- a/views/index.jade
+++ b/views/index.jade
@@ -43,7 +43,14 @@ html
 						button#save.actionBtn(type="button")
 							|Save
 					#scrubberDiv.tab
-						input#scrubber(type="range", min="0", max="1", value="0", step="0.01")
+						input#scrubber(type="range", min="0", max="{{gps.length}}", step="1", ng-model="frameCount")
+						div(ng-repeat="tag in tags")
+							.scrubberTag(ng-style="tag.style")
+								.scrubberTagPopup(ng-style="tag.popupStyle")
+									p Start Frame: {{tag.startFrame}}
+									p End Frame: {{tag.endFrame}}
+									p {{tag.category.name}}
+									p {{tag.category.description}}
 				#right-side
 					#slideDiv.tab
 						h4 Drag range
@@ -138,3 +145,4 @@ html
 		script(src='/videoProjection.js')
 		script(src='/radar.js')
 		script(src='/boundingBoxes.js')
+		script(src='/tags.js')
