--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -96,6 +96,7 @@ button:focus {
 
 .scrubberTagPopup {
     width: 150px;
+    top: -140px;
     padding: 10px 10px 1px 10px;
     background-color: rgba(255,255,255,0.2);
     position: relative;
