--- a/views/index.jade
+++ b/views/index.jade
@@ -91,7 +91,7 @@ html
 									| Display Color
 								input.form-control.category-input.color(type="text", name="displayColor")
 							.form-group
-								button#categorySubmit.btn.btn-default(type="submit")
+								button.actionBtn#categorySubmit.btn.btn-default(type="submit")
 									| Submit
 					#tagContent.tab.hidden
 						form#tagForm
@@ -117,7 +117,7 @@ html
 									| Description
 								input.tag-input.form-control(type="text", name="description")
 							.form-group
-								button#tagSubmit.btn.btn-default(type="submit")
+								button.actionBtn#tagSubmit.btn.btn-default(type="submit")
 									| Submit
 				#videoPlayerWrap
 		script(src='/vendor/jquery.js')
