--- a/views/index.jade
+++ b/views/index.jade
@@ -29,6 +29,11 @@ html
 									li  Select point, then shift+click to select segment
 					#videoPlayer
 						canvas#projectionCanvas
+					#slideDiv.tab
+						h4 Drag range
+						input#drrange(type="range", min="1", max="60", value="15", step="5")
+						h4 Play speed
+						input#playspeedrange(type="range", min="1", max="5", value="1", step="1")
 				#left-bottom
 					#fps.tab
 				#center-top
@@ -52,11 +57,6 @@ html
 									p {{tag.category.name}}
 									p {{tag.category.description}}
 				#right-side
-					#slideDiv.tab
-						h4 Drag range
-						input#drrange(type="range", min="1", max="60", value="15", step="5")
-						h4 Play speed
-						input#playspeedrange(type="range", min="1", max="5", value="1", step="1")
 					#options.tab
 						div
 							button#fork.actionBtn(type="button", ng-show="forkShow")
@@ -71,6 +71,7 @@ html
 							button#delete.actionBtn(type="button", ng-show="deleteShow")
 								|Delete
 					.tab
+						h4 Error Tracker
 						div
 							button#categoryAddBtn.actionBtn(type="button")
 								| Add Category
